force-app/main/default/objects/ESS_LC1_Project__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <formula>Owner:User.FirstName_EN__c + &apos; &apos; +  Owner:User.LastName_EN__c</formula>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Project_Manager__r.EMAIL__c</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <formula>Project_Manager__r.EMPLOYEEID__c</formula>
        <label>Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Updated_By__c</fullName>
        <formula>LastModifiedBy.FirstName_EN__c + &apos; &apos; +  LastModifiedBy.LastName_EN__c</formula>
        <label>Last Updated By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <formula>Project_Manager__r.OBJENFULLNAME__c</formula>
        <label>Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Name__c</fullName>
        <formula>Project_Manager__r.EN_Fullname__c</formula>
        <label>Project Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipName>ESS_LC1_Project</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <label>i-Link+ LC1 Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PJ-{0000}</displayFormat>
        <label>Project ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>